--- a/package.json
+++ b/package.json
@@ -16,15 +16,12 @@
     "browserify": "^6.3.3",
     "gulp": "~3.8.10",
     "gulp-rename": "^1.2.0",
-    "lodash": "^2.4.1",
+    "lodash": "^4.1.0",
     "rimraf": "~2.2.8",
     "standard": "^5.4.1",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1"
   },
   "author": "Christoph Burgdorf <christoph@thoughtram.io>",
-  "license": "MIT",
-  "dependencies": {
-    "events": "^1.1.0"
-  }
+  "license": "MIT"
 }
