--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "bugs": {
     "url": "https://github.com/thoughtram/es6-6to5-browserify-boilerplate/issues"
   },
+  "scripts": {
+    "start": "babel-node server/index.js --presets es2015,stage-0"
+  },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "babelify": "~5.0.3",
     "browser-sync": "^1.7.1",
     "browserify": "^6.3.3",
@@ -18,6 +24,8 @@
     "gulp-rename": "^1.2.0",
     "lodash": "^4.1.0",
     "rimraf": "~2.2.8",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
     "standard": "^5.4.1",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1"
