--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-cli": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babelify": "~5.0.3",
+    "babelify": "^7.2.0",
     "browser-sync": "^1.7.1",
     "browserify": "^6.3.3",
     "gulp": "~3.8.10",
